--- a/PUC.PosGraduacao.BookStore.API/appsettings.Development.json
+++ b/PUC.PosGraduacao.BookStore.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=BOOK-QT030EJP6S;Initial Catalog=bookstore;Integrated Security=True"
   }
 }
