--- a/PUC.PosGraduacao.BookStore.Services/PUC.PosGraduacao.BookStore.Services.csproj
+++ b/PUC.PosGraduacao.BookStore.Services/PUC.PosGraduacao.BookStore.Services.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PUC.PosGraduacao.BookStore.Domain\PUC.PosGraduacao.BookStore.Domain.csproj" />
     <ProjectReference Include="..\PUC.PosGraduacao.BookStore.Infra.Data\PUC.PosGraduacao.BookStore.Infra.Data.csproj" />
   </ItemGroup>
 
