--- a/PUC.PosGraduacao.BookStore.API/appsettings.Development.json
+++ b/PUC.PosGraduacao.BookStore.API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=BOOK-QT030EJP6S;Initial Catalog=bookstore;Integrated Security=True"
-  }
+  },
+  "ApiUrl":  "https://localhost:5001/"
 }
