Change server name

--- a/PUC.PosGraduacao.BookStore.API/appsettings.Development.json
+++ b/PUC.PosGraduacao.BookStore.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BOOK-QT030EJP6S;Initial Catalog=bookstore;Integrated Security=True",
+    "DefaultConnection": "Data Source=RAFAACQV-PC;Initial Catalog=bookstore;Integrated Security=True",
     "Redis": "localhost"
   },
   "ApiUrl":  "https://localhost:5001/"
