--- a/PUC.PosGraduacao.BookStore.Infra.Data/PUC.PosGraduacao.BookStore.Infra.Data.csproj
+++ b/PUC.PosGraduacao.BookStore.Infra.Data/PUC.PosGraduacao.BookStore.Infra.Data.csproj
@@ -17,7 +17,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.22" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.33.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.33.0" />
   </ItemGroup>
 
   <ItemGroup>
