--- a/PUC.PosGraduacao.BookStore.API/appsettings.Development.json
+++ b/PUC.PosGraduacao.BookStore.API/appsettings.Development.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=RAFAACQV-PC;Initial Catalog=bookstore;Integrated Security=True",
-    "Redis": "localhost"
+    "Redis": "localhost",
+    "IdentityConnection": "Data Source=RAFAACQV-PC;Initial Catalog=bookstore_identity;Integrated Security=True"
   },
   "ApiUrl":  "https://localhost:5001/"
 }
