--- a/PUC.PosGraduacao.BookStore.Infra.Data/PUC.PosGraduacao.BookStore.Infra.Data.csproj
+++ b/PUC.PosGraduacao.BookStore.Infra.Data/PUC.PosGraduacao.BookStore.Infra.Data.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20230918035625_InitialCreate.cs" />
+    <Compile Remove="Migrations\20230918035625_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20231008211542_InitialCreate.cs" />
+    <Compile Remove="Migrations\20231008211542_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\ApplicationDbContextModelSnapshot.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.22">
       <PrivateAssets>all</PrivateAssets>
