--- a/PUC.PosGraduacao.BookStore.Infra.Data/PUC.PosGraduacao.BookStore.Infra.Data.csproj
+++ b/PUC.PosGraduacao.BookStore.Infra.Data/PUC.PosGraduacao.BookStore.Infra.Data.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	<None Include="SeedData\**" CopyToOutputDirectory="PreserveNewest" />
     <ProjectReference Include="..\PUC.PosGraduacao.BookStore.Domain\PUC.PosGraduacao.BookStore.Domain.csproj" />
   </ItemGroup>
 
